[gd_scene load_steps=9 format=3 uid="uid://b1jnd5ggcbf08"]

[ext_resource type="Script" uid="uid://x8elwfea6jl7" path="res://scenes/missile.gd" id="1_4mw41"]
[ext_resource type="Texture2D" uid="uid://b7fpmcg7ian2w" path="res://art-and-sound/missile/spr_missile.png" id="2_81876"]
[ext_resource type="Texture2D" uid="uid://bystdxxd5iufl" path="res://art-and-sound/missile/smoke/spr_smoke_strip17trail.png" id="2_ubjnc"]
[ext_resource type="Texture2D" uid="uid://v5pxpcg2cih2" path="res://art-and-sound/missile/smoke/spr_smoke_strip24.png" id="3_rlo0n"]
[ext_resource type="AudioStream" uid="uid://dxnng5jikqdr2" path="res://art-and-sound/missile_target_locked.ogg" id="5_nh2ky"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pijoj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ubjnc")
}, {
"duration": 1.0,
"texture": ExtResource("3_rlo0n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8hc5"]
size = Vector2(209, 222)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h5ea0"]
radius = 8.0
height = 66.0

[node name="Missile" type="CharacterBody2D"]
position = Vector2(313, 278)
rotation = 4.71239
collision_mask = 0
script = ExtResource("1_4mw41")
speed = 150.0

[node name="SmokeTrail" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-71, 2)
scale = Vector2(0.0647437, 1)
sprite_frames = SubResource("SpriteFrames_pijoj")
autoplay = "default"
frame = 1
frame_progress = 0.00316248
flip_h = true

[node name="PlayerDetection" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(144.5, 1)
shape = SubResource("RectangleShape2D_e8hc5")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
scale = Vector2(1.375, 2.39628)
texture = ExtResource("2_81876")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
rotation = -1.5708
shape = SubResource("CapsuleShape2D_h5ea0")

[node name="LockOnSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_nh2ky")
volume_db = -16.66
pitch_scale = 0.5
bus = &"SoundEffects"

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
